--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,9 +21,9 @@
 </ul>
 </div>
 <div class="col-12 col-sm-4 text-center py-2 order-sm-2">
-  <small class="text-white">© 2019 {{ site.author }} All Rights Reserved</small>
+  <small class="text-white">© 2020 Unlaunch</small>
   {% if site.privacy %}<small class="ml-1"><a href="{{ site.privacy }}" target="_blank">Privacy Policy</a></small>{% endif %}
-  <p class="mt-2"><a href="/about/">About Docsy</a></p>	
+  <p class="mt-2"><a href="https://www.unlaunch.io/">Visit Unlaunch.io</a></p>	
       </div>
     </div>
   </div>
