--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,8 @@ layout: null
 excluded_in_search: true
 ---
 
-@import "https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i";
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;1,300;1,400&display=swap');
 @fa-font-path: "../webfonts";
 
 .gh-source {
@@ -138,12 +139,19 @@ excluded_in_search: true
 }
 
 html {
-    font-family: sans-serif;
-    line-height: 1.15;
+    font-size: 16px;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    text-rendering: optimizeLegibility;
     -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    -ms-overflow-style: scrollbar;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+    -moz-text-size-adjust: 100%;
+    text-size-adjust: 100%;
+    box-sizing: border-box;
+    min-height: 100vh;
+    outline-color: hsla(0,0%,9%,1);
+    outline-color: #171717;
 }
 
 @-ms-viewport {
@@ -165,13 +173,16 @@ section {
 
 body {
     margin: 0;
-    font-family: open sans, -apple-system, BlinkMacSystemFont, segoe ui, Roboto, helvetica neue, Arial, sans-serif, apple color emoji, segoe ui emoji, segoe ui symbol;
+    font-family: Rubik,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
     font-size: 1rem;
     font-weight: 400;
-    line-height: 1.5;
-    color: #222;
+    line-height: 160%;
+    min-height: 100vh;
+    color: #171717;
     text-align: left;
-    background-color: #fff
+    background-color: hsla(0,0%,100%,.998);
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
 }
 
 [tabindex="-1"]:focus {
@@ -274,7 +285,7 @@ sup {
 }
 
 a {
-    color: #3176d9;
+    color: hsla(206,100%,35%,1);
     text-decoration: none;
     background-color: transparent;
     -webkit-text-decoration-skip: objects
@@ -321,7 +332,7 @@ figure {
 
 img {
     vertical-align: middle;
-    border-style: none
+    border-style: none;
 }
 
 svg {
@@ -488,9 +499,9 @@ h6,
 .h5,
 .h6 {
     margin-bottom: .5rem;
-    font-family: inherit;
-    font-weight: 500;
-    line-height: 1.2;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    line-height: 1.4;
     color: inherit
 }
 
@@ -6760,7 +6771,7 @@ button.close {
     z-index: 1070;
     display: block;
     margin: 0;
-    font-family: open sans, -apple-system, BlinkMacSystemFont, segoe ui, Roboto, helvetica neue, Arial, sans-serif, apple color emoji, segoe ui emoji, segoe ui symbol;
+    font-family: Rubik,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
     font-style: normal;
     font-weight: 400;
     line-height: 1.5;
@@ -6885,7 +6896,7 @@ button.close {
     z-index: 1060;
     display: block;
     max-width: 276px;
-    font-family: open sans, -apple-system, BlinkMacSystemFont, segoe ui, Roboto, helvetica neue, Arial, sans-serif, apple color emoji, segoe ui emoji, segoe ui symbol;
+    font-family: Rubik,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
     font-style: normal;
     font-weight: 400;
     line-height: 1.5;
@@ -15550,7 +15561,7 @@ a.text-dark:focus {
     .td-content>dl dd,
     .td-content .footnotes,
     .td-content>.alert {
-        max-width: 80%
+        max-width: 100%
     }
 }
 
@@ -18222,7 +18233,11 @@ html body .md-typeset .headerlink {
 }
 
 .td-toc #TableOfContents a {
-    color: #888
+    line-height: 1.3;
+    font-size: .975rem;
+    padding: 2px 0;
+    padding-left: 7px;
+    margin: 4px 0;
 }
 
 .td-toc #TableOfContents a:hover {
