added docs header to be consistent and spelling fixes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,15 +12,19 @@
 	<div class="td-navbar-nav-scroll ml-md-auto" id="main_navbar">
 		<ul class="navbar-nav mt-2 mt-lg-0">
 			<li class="nav-item mr-4 mb-2 mb-lg-0">
-            <a class="nav-link" href="https://www.unlaunch.io/" target="_blank"><span>Home</span></a>
+            <a class="nav-link" href="https://www.unlaunch.io/"><span>Home</span></a>
+      </li>
+
+      <li class="nav-item mr-4 mb-2 mb-lg-0">
+        <a class="nav-link" href="https://docs.unlaunch.io/"><span>Docs</span></a>
       </li>
       
       <li class="nav-item mr-4 mb-2 mb-lg-0">
-        <a class="nav-link" href="https://blog.unlaunch.io/" target="_blank"><span>Blog</span></a>
+        <a class="nav-link" href="https://blog.unlaunch.io/"><span>Blog</span></a>
       </li>
 
   <li class="nav-item mr-4 mb-2 mb-lg-0">
-    <a class="nav-link ml-md-4" href="https://app.unlaunch.io/" target="_blank"><span>Log In</span></a>
+    <a class="nav-link ml-md-4" href="https://app.unlaunch.io/"><span>Log In</span></a>
   </li>
 		</ul>
 	</div>
