Multiple changes. See description.
1. Improved left sidebar layout.
2. Added Java example to Getting Started guide.
3. Added screenshot of Console to sdk-keys.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18106,12 +18106,13 @@ html body .md-typeset .headerlink {
 .td-sidebar-nav__section-title a {
     color: #171717;
     font-family: 'Roboto',-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
-    font-size: 1rem;
+    font-size: 1.1rem;
+    line-height: 180%;
 }
 
 .td-sidebar-nav .td-sidebar-link {
     display: block;
-    padding-bottom: .375rem
+    padding-bottom: .475rem
 }
 
 .td-sidebar-nav .td-sidebar-link__page {
