Allow edits directly on main branch instead of development

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 
             <div>
               <hr/>
-              <a class="ml-3 pt-2" href="{{ site.repo }}/edit/development/{{ page.path }}" target="_blank"><i class="fa fa-edit fa-fw"></i> Edit this page</a>
+              <a class="ml-3 pt-2" href="{{ site.repo }}/edit/main/{{ page.path }}" target="_blank"><i class="fa fa-edit fa-fw"></i> Edit this page</a>
               
               <a class="ml-3" href="{{ site.repo }}/issues/new?labels={% if page.editable %}{{ page.editable }}{% else %}question{% endif %}&title=Question:&body=Question on: {{ site.repo }}/tree/main/{{ page.path }}" target="_blank"><i class="fab fa-github fa-fw"></i> Report a mistake</a>
             </div>
